--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
 0.0.1
 -----
 * Initial version
+
+0.0.2
+-----
+* Drop version of meta to 1.0.0 because of compatibility issues with other packages
